# HVM3

./: '  .gitignore  CLAUDE.md  CODE_OF_CONDUCT  CONTRIBUTING.md  HVM.cabal  HVM.md  HVM3.cabal  IC.md  INTERS.md  MODES.md  PROVER_README.md  Prelude.hvml  README.md  a.hvml  bug.hvm  cabal.project  cabal.project.local  check_png_not_white.py  ic-prove-setup-summary.md  map.hvml  mat.hvm  mh-debug.txt  problem.md  test.hvml  test2.hvml  test3.hvml  test_prove.sh
.bin/: hvm
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: CI.yml  LINUX_CI.yml  MACOS_CI.yml  ci.yml
app/: Main.hs
book/: bench_cnots.hvml  bench_count.hvml  bench_cout.c  bench_parallel_sum_range.hvm  bench_sum_range.js  bench_sum_range.py  enum_bin.hvml  enum_coc_smart.hvml  enum_lam_naive_blc.hs  enum_lam_naive_blc.hvml  enum_lam_smart.hvml  enum_nat.hvml  enum_primes.hvml  feat_affine_ctx.hvml  feat_cmul.hvml  feat_hoas.hvml  feat_mut_ref.hvml  fuse_inc.hvm1  fuse_inc.hvml  fuse_mul.hvm  fuse_mul.hvml  fuse_rot.hvml  main.hvml  pseudo_metavar_unification.hvml  test.hvms
examples/: _test_.js  axioms.hvm  axioms_mp_sprint0.hvm  axioms_pimpq.hvm  bench_count.hvm  bench_sum_range.hvm  enum_1D_match.hvm  enum_bin.hvm  enum_coc_smart.hvm  enum_invert_add.hvm  enum_lam_naive_blc.hs  enum_lam_naive_blc.hvm  enum_lam_smart.hvm  enum_nat.hvm  enum_path_finder.hvm  enum_primes.hvm  feat_affine_ctx.hvm  fuse_inc.hvm  fuse_mul.hvm  fuse_rot.hvm  logic_syntax.hvm  prover_rules.hvm  target_mp_sprint0.hvm  target_pimpq.hvm  test_prover.hvm
src/: Collapse.hs  Compile.hs  Extract.hs  Foreign.hs  Inject.hs  Main.hs  Parse.hs  Reduce.hs  Runtime.c  Runtime.h  Show.hs  Type.hs
src/HVM/: API.hs  Adjust.hs  Collapse.hs  Compile.hs  Extract.hs  Foreign.hs  Inject.hs  Parse.hs  Reduce.hs  Runtime.c  Runtime.h  Type.hs
src/HVM/runtime/: heap.c  memory.c  print.c  reduce.c  stack.c  state.c  term.c
src/HVM/runtime/bench/: memheat.c
src/HVM/runtime/prim/: DUP.c  LOG.c  SUP.c
src/HVM/runtime/reduce/: app_ctr.c  app_era.c  app_lam.c  app_sup.c  app_una.c  app_w32.c  dup_ctr.c  dup_era.c  dup_lam.c  dup_ref.c  dup_sup.c  dup_una.c  dup_w32.c  let.c  mat_ctr.c  mat_era.c  mat_lam.c  mat_sup.c  mat_una.c  mat_w32.c  opx_ctr.c  opx_era.c  opx_lam.c  opx_sup.c  opx_una.c  opx_w32.c  opy_ctr.c  opy_era.c  opy_lam.c  opy_sup.c  opy_una.c  opy_w32.c  ref.c  ref_sup.c
src/HVML/: Collapse.hs  Compile.hs  Extract.hs  Foreign.hs  Inject.hs  Main.hs  Parse.hs  Reduce.hs  Runtime.c  Show.hs  Type.hs
src/HVMS/: Runtime.c
src/Prover/: CoreSyntaxBridge.hs  Proof.hs  Search.hs
