cabal-version:      3.0
name:               HVM
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple


library
    default-language: GHC2024
    build-depends:    base ^>=4.21.0.0,
                      mtl ^>=2.3.1,
                      containers ^>=0.7,
                      parsec ^>=3.1.17.0,
                      hs-highlight ^>= 1.0.3,
                      ansi-terminal == 1.1.1,
                      file-embed,
                      process,
                      libffi,
                      unix,
                      deepseq
    exposed-modules:  HVM.Type
                    , HVM.Collapse
                    , HVM.Compile
                    , HVM.Extract
                    , HVM.Foreign
                    , HVM.Inject
                    , HVM.Parse
                    , HVM.Reduce
                    , HVM.API
    other-modules:
    hs-source-dirs:   src
    c-sources:        src/HVM/Runtime.c
    extra-libraries:  c
    ghc-options:     -Wno-all

executable hvm3
    default-language: GHC2024
    build-depends:    base ^>=4.21.0.0,
                      containers ^>=0.7,
                      network
    main-is:          Main.hs
    build-depends:    HVM
    hs-source-dirs:   app
    ghc-options:     -Wno-all -threaded
