cabal-version:      3.0
name:               HVM3
version:            0.1.0.0
homepage:           https://higherorderco.com/
license:            MIT
license-file:       LICENSE
author:             Victor Taelin
maintainer:         victor.taelin@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hvml
    import:           warnings
    main-is:          HVML/Main.hs
    other-modules:    HVML.Type
                    , HVML.Collapse
                    , HVML.Compile
                    , HVML.Extract
                    , HVML.Foreign
                    , HVML.Inject
                    , HVML.Parse
                    , HVML.Reduce
                    , HVML.Show
    build-depends:    base ^>=4.21.0.0,
                      mtl ^>=2.3.1,
                      containers ^>=0.7,
                      parsec ^>=3.1.17.0,
                      hs-highlight == 1.0.4,
                      ansi-terminal == 1.1.1,
                      process,
                      libffi,
                      unix,
                      file-embed,
    hs-source-dirs:   src
    default-language: GHC2024
    c-sources:        src/HVML/Runtime.c
    extra-libraries:  c
    ghc-options:     -Wno-all -threaded

executable hvms
    import:           warnings
    main-is:          HVMS/Main.hs
    other-modules:    HVMS.Type
                    , HVMS.Extract
                    , HVMS.Inject
                    , HVMS.Parse
                    , HVMS.Show
    build-depends:    base ^>=4.21.0.0,
                      containers ^>=0.7,
                      parsec ^>=3.1.17.0,
    hs-source-dirs:   src
    default-language: GHC2024
    c-sources:        src/HVMS/Runtime.c
    extra-libraries:  c
    ghc-options:     -Wno-all
